--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,14 @@ spring.datasource.username=admin
 spring.datasource.password=tolama
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+#==== email properties ====#
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.username=testonspring@gmail.com
+spring.mail.password=te5t5prin&6
+
+spring.mail.properties.mail.smtp.auth=true
+
+spring.mail.properties.mail.smtp.starttls.required=true
