--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,15 @@ spring.output.ansi.enabled=ALWAYS
 
 #==== connect to mysql ======#
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/db_lecture?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/db_lecture?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=admin
 spring.datasource.password=tolama
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+#==== lock on db ====#
+spring.jpa.open-in-view=false
+
 
 #==== email properties ====#
 spring.mail.host=smtp.gmail.com
