Add basic index.html #9, add some changes in html and css, add server address in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.output.ansi.enabled=ALWAYS
+spring.output.ansi.enabled=ALWAYS.
 
 #==== connect to mysql ======#
 spring.jpa.hibernate.ddl-auto=update
@@ -22,3 +22,5 @@ spring.mail.password=te5t5prin&6
 spring.mail.properties.mail.smtp.auth=true
 
 spring.mail.properties.mail.smtp.starttls.required=true
+
+my.local.server.ip=192.168.43.32
